testsuite/tests/typecheck/should_fail/tcfail187.hs
-- Trac #1806

module ShouldFail where

data Foo = (:::)

foo (x ::: y) = ()
