testsuite/tests/typecheck/should_fail/tcfail187.stderr

tcfail187.hs:7:6: error: [GHC-27346]
    • The data constructor ‘:::’ should have no arguments, but has been given 2
    • In the pattern: x ::: y
      In an equation for ‘foo’: foo (x ::: y) = ()
